2001-12-11  Jody Goldberg <jody@gnome.org>

	* src/xml-io.c (gnumeric_xml_set_compression) : Make the compression
	  optional.
	(gnumeric_xml_write_workbook) : when saving .xml don't compress.

	* src/xml-io-autoft.c :  Use libxml[12] compatibility xmlRootNode

2001-12-11  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=66666 Part 1
	* src/colrow.c (colrow_get_states) : init even if we are default
	  just in case something scans it later.

2001-12-10  Jody Goldberg <jody@gnome.org>

	* configure.in (version) : bump to 0.99.0 in preparation for 1.0.0

2001-12-10  Jody Goldberg <jody@gnome.org>

	* src/value.c (value_new_string_str) : absorb the ref.
	(value_duplicate) : manually add a ref here.

	* src/format.c (render_number) : make public.
	(do_render_number) : remove pointless args.
	(format_number) : localize more of the scientific handling.

2001-12-09  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=66442
	* src/sort.c (sort_contents) : support sorting that does not start at
	  col/row 0.

2001-12-07  Jody Goldberg <jody@gnome.org>

	* src/sheet.c (sheet_make_cell_visible) : add a couple_pane argument.
	* src/sheet-control-gui.c (scg_cursor_move_to) : merge into.
	(scg_cursor_move) : here.
	* src/sheet-control.c (sc_make_cell_visible) : remove the force
	  argument.

2001-12-07  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/analysis-tools.c (ztest_tool) : fix leak
	(ttest_paired_tool) : ditto
	(ttest_eq_var_tool) : ditto
	(ttest_neq_var_tool) : ditto

2001-12-07  Jody Goldberg <jody@gnome.org>

	* src/parse-util.c (parse_cell_name_or_range) : delete unused.
	(parse_cell_name_list) : ditto.

2001-12-06  Jody Goldberg <jody@gnome.org>

	* src/sheet.c (sheet_colrow_set_collapse) : new.
	(sheet_colrow_insert_finish) : new.
	(sheet_colrow_delete_finish) : new.
	(sheet_{col,row}_{ins,del} : use them here, we shoulw now correctly
	  handle collapse states and gutters when ins/del cols/row.
